--- a/app/views/admin/content/_form.html.erb
+++ b/app/views/admin/content/_form.html.erb
@@ -7,7 +7,7 @@
 
 <div class='editor-right'>
   <div class='well'>
-    <h4><%= _("_Publish settings") %></h4>
+    <h4><%= _("Publish settings") %></h4>
     <div class='actions'>
       <%= link_to_destroy_with_profiles(@article) unless @article.id.nil? or @article.state.to_s.downcase == 'draft' %>
 	  <span id='destroy_link'><%= link_to_destroy_draft @article %></span>
